<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.itshaeds.RegisterActivity">




    <ImageView

        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/itshadslogo" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="12dp"
        android:textColor="@color/green"
        android:layout_marginTop="40dp"
        android:text="@string/get_startedLogintitle" />

    <EditText
        android:id="@+id/editTextfnm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/first_nameReg"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/editTextlnm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextfnm"
        android:layout_marginTop="10dp"
        android:textSize="10dp"
        android:paddingStart="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_nameReg"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/editTextemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextlnm"
        android:layout_marginTop="10dp"
        android:textSize="10dp"
        android:paddingStart="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/emailReg"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/editTextps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextemail"
        android:paddingStart="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="10dp"
        android:hint="@string/passwordtext_login"
        android:inputType="textPassword"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/editTextps1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextps"
        android:paddingStart="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="10dp"
        android:hint="@string/confirm_passwordReg"
        android:inputType="textPassword"
        android:paddingLeft="5dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextps1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"

        android:layout_marginLeft="110dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="12dp"
        android:layout_marginStart="80dp"
        android:layout_alignTop="@+id/radioGroup"
        android:text="@string/individual_userReg"
        android:layout_marginLeft="70dp" />

    <TextView
        android:id="@+id/textView7"
        android:textSize="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup"
       android:layout_marginStart="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/corporate_customerReg"
        android:layout_marginLeft="70dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView7"
        android:textSize="12dp"
        android:layout_marginStart="30dp"
        android:text="@string/click_here_to_read_and_agree_ourReg"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_below="@id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/checkBox"
        android:layout_toRightOf="@+id/checkBox"
        android:text="@string/privacy_policyReg" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:textSize="12dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="5dp"
        android:text="@string/terms_and_conditionsReg" />

    <Button
        android:id="@+id/button_regs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttoncorner"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="12dp"
        android:textStyle="bold" />


</RelativeLayout>
