<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tbs.thinkbiz.solutions.itshades.PrevayActivity">


    <ScrollView
        android:id="@+id/scrolview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/re"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textitshds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="151dp"
                android:textSize="17dp"
                android:textAllCaps="false"
                android:textColor="#545454"
                android:layout_marginTop="5dp"
                android:text="About IT Shades"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="151dp" />




            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="151dp"
                android:textSize="15dp"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="30dp"
                android:text="Introduction:"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="151dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:textColor="#545454"
                android:textSize="12sp"
                android:lineSpacingExtra="3sp"
                tools:ignore="RtlCompat"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="10dp"
                android:text="@string/intro" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginEnd="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="151dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="Types and Uses of Collected Information"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:textColor="#545454"
                android:textSize="12sp"
                android:lineSpacingExtra="3sp"
                tools:ignore="RtlCompat"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textView"
                android:layout_marginTop="10dp"
                android:text="@string/proddesc1" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="151dp"
                android:textSize="12dp"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="20dp"
                android:text="How we use your personal data."
                android:layout_marginLeft="20dp"
                android:layout_marginRight="151dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:textColor="#545454"
                android:textSize="12sp"
                android:lineSpacingExtra="3sp"
                tools:ignore="RtlCompat"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textView11"
                android:layout_marginTop="10dp"
                android:text="@string/proddesc2" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
